<resources>
    <string name="app_name">SoundsLike</string>
    <string name="cd_back">Back</string>
    <string name="cd_download">Download</string>
    <string name="cd_album_art">Album Art</string>
    <string name="cd_previous">Previous track</string>
    <string name="cd_play">Play</string>
    <string name="cd_pause">Pause</string>
    <string name="cd_next">Next track</string>
    <string name="cd_like">Like song</string>
    <string name="cd_queue">Show queue</string>
    <string name="cd_shuffle">Shuffle</string>
    <string name="cd_add_to_playlist">Add to playlist</string>

    <string name="title_home">Home</string>
    <string name="title_explore">Explore</string>
    <string name="title_playlists">Playlists</string>
    <string name="title_library">Library</string>

    <string name="home_fragment_label">Home Fragment</string>
    <string name="explore_fragment_label">Explore Fragment</string>
    <string name="playlists_fragment_label">Playlists Fragment</string>
    <string name="library_fragment_label">Library Fragment</string>
</resources>