<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">


    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.soundslike.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_playlist_detail"
            app:destination="@id/navigation_playlist_detail" />
        <action
            android:id="@+id/action_home_to_song_view"
            app:destination="@id/navigation_song_view" />
        <!-- Action from Home to Artist Detail -->
        <action
            android:id="@+id/action_home_to_artist_detail"
            app:destination="@id/navigation_artist_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.example.soundslike.ui.explore.ExploreFragment"
        android:label="@string/title_explore"
        tools:layout="@layout/fragment_explore">
        <action
            android:id="@+id/action_explore_to_song_view"
            app:destination="@id/navigation_song_view" />
    </fragment>

    <fragment
        android:id="@+id/navigation_playlists"
        android:name="com.example.soundslike.ui.playlists.PlaylistsFragment"
        android:label="@string/title_playlists"
        tools:layout="@layout/fragment_playlists">
        <action
            android:id="@+id/action_playlists_to_playlist_detail"
            app:destination="@id/navigation_playlist_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_library"
        android:name="com.example.soundslike.ui.library.LibraryFragment"
        android:label="@string/title_library"
        tools:layout="@layout/fragment_library">
        <action
            android:id="@+id/action_library_to_playlist_detail"
            app:destination="@id/navigation_playlist_detail" />
        <action
            android:id="@+id/action_library_to_song_view"
            app:destination="@id/navigation_song_view" />
        <!-- Action from Library to Artist Detail -->
        <action
            android:id="@+id/action_library_to_artist_detail"
            app:destination="@id/navigation_artist_detail" />
    </fragment>


    <!-- Detail Screens -->
    <fragment
        android:id="@+id/navigation_playlist_detail"
        android:name="com.example.soundslike.ui.playlistdetail.PlaylistDetailFragment"
        android:label="Playlist"
        tools:layout="@layout/fragment_playlist_detail">
        <argument
            android:name="playlistId"
            android:defaultValue="default_playlist_id"
            app:argType="string" />
        <action
            android:id="@+id/action_playlist_detail_to_song_view"
            app:destination="@id/navigation_song_view" />
    </fragment>

    <fragment
        android:id="@+id/navigation_song_view"
        android:name="com.example.soundslike.ui.song.SongViewFragment"
        android:label="Now Playing"
        tools:layout="@layout/fragment_song_view">
        <argument
            android:name="songId"
            android:defaultValue="default_song_id"
            app:argType="string" />
    </fragment>

    <!-- **** NEW: Artist Detail Destination **** -->
    <fragment
        android:id="@+id/navigation_artist_detail"
        android:name="com.example.soundslike.ui.artistdetail.ArtistDetailFragment"
        android:label="Artist"
        tools:layout="@layout/fragment_artist_detail">
        <argument
            android:name="artistId"
            app:argType="string" />
        <!-- TODO: Add action to Song View if needed later -->
        <!-- <action
            android:id="@+id/action_artist_detail_to_song_view"
            app:destination="@id/navigation_song_view" /> -->
    </fragment>
    <!-- ************************************** -->

</navigation>